include/codata_constants_2018.h

ADD_IMPORT extern const double HARTREE_HERTZ_RELATIONSHIP;/**< Hz */
ADD_IMPORT extern const double U_HARTREE_HERTZ_RELATIONSHIP;/**< Hz */
ADD_IMPORT extern const double HARTREE_INVERSE_METER_RELATIONSHIP;/**< m^-1 */
ADD_IMPORT extern const double U_HARTREE_INVERSE_METER_RELATIONSHIP;/**< m^-1 */
ADD_IMPORT extern const double HARTREE_JOULE_RELATIONSHIP;/**< J */
ADD_IMPORT extern const double U_HARTREE_JOULE_RELATIONSHIP;/**< J */
ADD_IMPORT extern const double HARTREE_KELVIN_RELATIONSHIP;/**< K */
ADD_IMPORT extern const double U_HARTREE_KELVIN_RELATIONSHIP;/**< K */
ADD_IMPORT extern const double HARTREE_KILOGRAM_RELATIONSHIP;/**< kg */
ADD_IMPORT extern const double U_HARTREE_KILOGRAM_RELATIONSHIP;/**< kg */
ADD_IMPORT extern const double HELION_ELECTRON_MASS_RATIO;/**<  */
ADD_IMPORT extern const double U_HELION_ELECTRON_MASS_RATIO;/**<  */
ADD_IMPORT extern const double HELION_G_FACTOR;/**<  */
ADD_IMPORT extern const double U_HELION_G_FACTOR;/**<  */
ADD_IMPORT extern const double HELION_MAG__MOM;/**< J T^-1 */
ADD_IMPORT extern const double U_HELION_MAG__MOM;/**< J T^-1 */
ADD_IMPORT extern const double HELION_MAG__MOM__TO_BOHR_MAGNETON_RATIO;/**<  */
ADD_IMPORT extern const double U_HELION_MAG__MOM__TO_BOHR_MAGNETON_RATIO;/**<  */
ADD_IMPORT extern const double HELION_MAG__MOM__TO_NUCLEAR_MAGNETON_RATIO;/**<  */
ADD_IMPORT extern const double U_HELION_MAG__MOM__TO_NUCLEAR_MAGNETON_RATIO;/**<  */
ADD_IMPORT extern const double HELION_MASS;/**< kg */
ADD_IMPORT extern const double U_HELION_MASS;/**< kg */
ADD_IMPORT extern const double HELION_MASS_ENERGY_EQUIVALENT;/**< J */
ADD_IMPORT extern const double U_HELION_MASS_ENERGY_EQUIVALENT;/**< J */
ADD_IMPORT extern const double HELION_MASS_ENERGY_EQUIVALENT_IN_MEV;/**< MeV */
ADD_IMPORT extern const double U_HELION_MASS_ENERGY_EQUIVALENT_IN_MEV;/**< MeV */
ADD_IMPORT extern const double HELION_MASS_IN_U;/**< u */
ADD_IMPORT extern const double U_HELION_MASS_IN_U;/**< u */
ADD_IMPORT extern const double HELION_MOLAR_MASS;/**< kg mol^-1 */
ADD_IMPORT extern const double U_HELION_MOLAR_MASS;/**< kg mol^-1 */
ADD_IMPORT extern const double HELION_PROTON_MASS_RATIO;/**<  */
ADD_IMPORT extern const double U_HELION_PROTON_MASS_RATIO;/**<  */
ADD_IMPORT extern const double HELION_RELATIVE_ATOMIC_MASS;/**<  */
ADD_IMPORT extern const double U_HELION_RELATIVE_ATOMIC_MASS;/**<  */
ADD_IMPORT extern const double HELION_SHIELDING_SHIFT;/**<  */
ADD_IMPORT extern const double U_HELION_SHIELDING_SHIFT;/**<  */
ADD_IMPORT extern const double HERTZ_ATOMIC_MASS_UNIT_RELATIONSHIP;/**< u */
ADD_IMPORT extern const double U_HERTZ_ATOMIC_MASS_UNIT_RELATIONSHIP;/**< u */
ADD_IMPORT extern const double HERTZ_ELECTRON_VOLT_RELATIONSHIP;/**< eV */
ADD_IMPORT extern const double U_HERTZ_ELECTRON_VOLT_RELATIONSHIP;/**< eV */
ADD_IMPORT extern const double HERTZ_HARTREE_RELATIONSHIP;/**< E_h */
ADD_IMPORT extern const double U_HERTZ_HARTREE_RELATIONSHIP;/**< E_h */
ADD_IMPORT extern const double HERTZ_INVERSE_METER_RELATIONSHIP;/**< m^-1 */
ADD_IMPORT extern const double U_HERTZ_INVERSE_METER_RELATIONSHIP;/**< m^-1 */
ADD_IMPORT extern const double HERTZ_JOULE_RELATIONSHIP;/**< J */
ADD_IMPORT extern const double U_HERTZ_JOULE_RELATIONSHIP;/**< J */
ADD_IMPORT extern const double HERTZ_KELVIN_RELATIONSHIP;/**< K */
ADD_IMPORT extern const double U_HERTZ_KELVIN_RELATIONSHIP;/**< K */
ADD_IMPORT extern const double HERTZ_KILOGRAM_RELATIONSHIP;/**< kg */
ADD_IMPORT extern const double U_HERTZ_KILOGRAM_RELATIONSHIP;/**< kg */
ADD_IMPORT extern const double HYPERFINE_TRANSITION_FREQUENCY_OF_CS_133;/**< Hz */
ADD_IMPORT extern const double U_HYPERFINE_TRANSITION_FREQUENCY_OF_CS_133;/**< Hz */
ADD_IMPORT extern const double INVERSE_FINE_STRUCTURE_CONSTANT;/**<  */
ADD_IMPORT extern const double U_INVERSE_FINE_STRUCTURE_CONSTANT;/**<  */