src/codata_constants_latest.f90


real(dp), parameter, public :: HARTREE_HERTZ_RELATIONSHIP=6.579683920502e15_dp !< Hz
real(dp), parameter, public :: U_HARTREE_HERTZ_RELATIONSHIP=0.000000000013e15_dp !< Hz

real(cdp), protected, public, bind(C,name="HARTREE_HERTZ_RELATIONSHIP"):: &
capi_131=HARTREE_HERTZ_RELATIONSHIP !< C API Hz
real(cdp), protected, public, bind(C,name="U_HARTREE_HERTZ_RELATIONSHIP") :: &
capi_U_131=U_HARTREE_HERTZ_RELATIONSHIP !< C API Hz

real(dp), parameter, public :: HARTREE_INVERSE_METER_RELATIONSHIP=2.1947463136320e7_dp !< m^-1
real(dp), parameter, public :: U_HARTREE_INVERSE_METER_RELATIONSHIP=0.0000000000043e7_dp !< m^-1

real(cdp), protected, public, bind(C,name="HARTREE_INVERSE_METER_RELATIONSHIP"):: &
capi_132=HARTREE_INVERSE_METER_RELATIONSHIP !< C API m^-1
real(cdp), protected, public, bind(C,name="U_HARTREE_INVERSE_METER_RELATIONSHIP") :: &
capi_U_132=U_HARTREE_INVERSE_METER_RELATIONSHIP !< C API m^-1

real(dp), parameter, public :: HARTREE_JOULE_RELATIONSHIP=4.3597447222071e-18_dp !< J
real(dp), parameter, public :: U_HARTREE_JOULE_RELATIONSHIP=0.0000000000085e-18_dp !< J

real(cdp), protected, public, bind(C,name="HARTREE_JOULE_RELATIONSHIP"):: &
capi_133=HARTREE_JOULE_RELATIONSHIP !< C API J
real(cdp), protected, public, bind(C,name="U_HARTREE_JOULE_RELATIONSHIP") :: &
capi_U_133=U_HARTREE_JOULE_RELATIONSHIP !< C API J

real(dp), parameter, public :: HARTREE_KELVIN_RELATIONSHIP=3.1577502480407e5_dp !< K
real(dp), parameter, public :: U_HARTREE_KELVIN_RELATIONSHIP=0.0000000000061e5_dp !< K

real(cdp), protected, public, bind(C,name="HARTREE_KELVIN_RELATIONSHIP"):: &
capi_134=HARTREE_KELVIN_RELATIONSHIP !< C API K
real(cdp), protected, public, bind(C,name="U_HARTREE_KELVIN_RELATIONSHIP") :: &
capi_U_134=U_HARTREE_KELVIN_RELATIONSHIP !< C API K

real(dp), parameter, public :: HARTREE_KILOGRAM_RELATIONSHIP=4.8508702095432e-35_dp !< kg
real(dp), parameter, public :: U_HARTREE_KILOGRAM_RELATIONSHIP=0.0000000000094e-35_dp !< kg

real(cdp), protected, public, bind(C,name="HARTREE_KILOGRAM_RELATIONSHIP"):: &
capi_135=HARTREE_KILOGRAM_RELATIONSHIP !< C API kg
real(cdp), protected, public, bind(C,name="U_HARTREE_KILOGRAM_RELATIONSHIP") :: &
capi_U_135=U_HARTREE_KILOGRAM_RELATIONSHIP !< C API kg

real(dp), parameter, public :: HELION_ELECTRON_MASS_RATIO=5495.88528007_dp !< dimensionless
real(dp), parameter, public :: U_HELION_ELECTRON_MASS_RATIO=0.00000024_dp !< dimensionless

real(cdp), protected, public, bind(C,name="HELION_ELECTRON_MASS_RATIO"):: &
capi_136=HELION_ELECTRON_MASS_RATIO !< C API dimensionless
real(cdp), protected, public, bind(C,name="U_HELION_ELECTRON_MASS_RATIO") :: &
capi_U_136=U_HELION_ELECTRON_MASS_RATIO !< C API dimensionless

real(dp), parameter, public :: HELION_G_FACTOR=-4.255250615_dp !< dimensionless
real(dp), parameter, public :: U_HELION_G_FACTOR=0.000000050_dp !< dimensionless

real(cdp), protected, public, bind(C,name="HELION_G_FACTOR"):: &
capi_137=HELION_G_FACTOR !< C API dimensionless
real(cdp), protected, public, bind(C,name="U_HELION_G_FACTOR") :: &
capi_U_137=U_HELION_G_FACTOR !< C API dimensionless

real(dp), parameter, public :: HELION_MAG__MOM=-1.074617532e-26_dp !< J T^-1
real(dp), parameter, public :: U_HELION_MAG__MOM=0.000000013e-26_dp !< J T^-1

real(cdp), protected, public, bind(C,name="HELION_MAG__MOM"):: &
capi_138=HELION_MAG__MOM !< C API J T^-1
real(cdp), protected, public, bind(C,name="U_HELION_MAG__MOM") :: &
capi_U_138=U_HELION_MAG__MOM !< C API J T^-1

real(dp), parameter, public :: HELION_MAG__MOM__TO_BOHR_MAGNETON_RATIO=-1.158740958e-3_dp !< dimensionless
real(dp), parameter, public :: U_HELION_MAG__MOM__TO_BOHR_MAGNETON_RATIO=0.000000014e-3_dp !< dimensionless

real(cdp), protected, public, bind(C,name="HELION_MAG__MOM__TO_BOHR_MAGNETON_RATIO"):: &
capi_139=HELION_MAG__MOM__TO_BOHR_MAGNETON_RATIO !< C API dimensionless
real(cdp), protected, public, bind(C,name="U_HELION_MAG__MOM__TO_BOHR_MAGNETON_RATIO") :: &
capi_U_139=U_HELION_MAG__MOM__TO_BOHR_MAGNETON_RATIO !< C API dimensionless

real(dp), parameter, public :: HELION_MAG__MOM__TO_NUCLEAR_MAGNETON_RATIO=-2.127625307_dp !< dimensionless
real(dp), parameter, public :: U_HELION_MAG__MOM__TO_NUCLEAR_MAGNETON_RATIO=0.000000025_dp !< dimensionless

real(cdp), protected, public, bind(C,name="HELION_MAG__MOM__TO_NUCLEAR_MAGNETON_RATIO"):: &
capi_140=HELION_MAG__MOM__TO_NUCLEAR_MAGNETON_RATIO !< C API dimensionless
real(cdp), protected, public, bind(C,name="U_HELION_MAG__MOM__TO_NUCLEAR_MAGNETON_RATIO") :: &
capi_U_140=U_HELION_MAG__MOM__TO_NUCLEAR_MAGNETON_RATIO !< C API dimensionless

real(dp), parameter, public :: HELION_MASS=5.0064127796e-27_dp !< kg
real(dp), parameter, public :: U_HELION_MASS=0.0000000015e-27_dp !< kg

real(cdp), protected, public, bind(C,name="HELION_MASS"):: &
capi_141=HELION_MASS !< C API kg
real(cdp), protected, public, bind(C,name="U_HELION_MASS") :: &
capi_U_141=U_HELION_MASS !< C API kg

real(dp), parameter, public :: HELION_MASS_ENERGY_EQUIVALENT=4.4995394125e-10_dp !< J
real(dp), parameter, public :: U_HELION_MASS_ENERGY_EQUIVALENT=0.0000000014e-10_dp !< J

real(cdp), protected, public, bind(C,name="HELION_MASS_ENERGY_EQUIVALENT"):: &
capi_142=HELION_MASS_ENERGY_EQUIVALENT !< C API J
real(cdp), protected, public, bind(C,name="U_HELION_MASS_ENERGY_EQUIVALENT") :: &
capi_U_142=U_HELION_MASS_ENERGY_EQUIVALENT !< C API J

real(dp), parameter, public :: HELION_MASS_ENERGY_EQUIVALENT_IN_MEV=2808.39160743_dp !< MeV
real(dp), parameter, public :: U_HELION_MASS_ENERGY_EQUIVALENT_IN_MEV=0.00000085_dp !< MeV

real(cdp), protected, public, bind(C,name="HELION_MASS_ENERGY_EQUIVALENT_IN_MEV"):: &
capi_143=HELION_MASS_ENERGY_EQUIVALENT_IN_MEV !< C API MeV
real(cdp), protected, public, bind(C,name="U_HELION_MASS_ENERGY_EQUIVALENT_IN_MEV") :: &
capi_U_143=U_HELION_MASS_ENERGY_EQUIVALENT_IN_MEV !< C API MeV

real(dp), parameter, public :: HELION_MASS_IN_U=3.014932247175_dp !< u
real(dp), parameter, public :: U_HELION_MASS_IN_U=0.000000000097_dp !< u

real(cdp), protected, public, bind(C,name="HELION_MASS_IN_U"):: &
capi_144=HELION_MASS_IN_U !< C API u
real(cdp), protected, public, bind(C,name="U_HELION_MASS_IN_U") :: &
capi_U_144=U_HELION_MASS_IN_U !< C API u

real(dp), parameter, public :: HELION_MOLAR_MASS=3.01493224613e-3_dp !< kg mol^-1
real(dp), parameter, public :: U_HELION_MOLAR_MASS=0.00000000091e-3_dp !< kg mol^-1

real(cdp), protected, public, bind(C,name="HELION_MOLAR_MASS"):: &
capi_145=HELION_MOLAR_MASS !< C API kg mol^-1
real(cdp), protected, public, bind(C,name="U_HELION_MOLAR_MASS") :: &
capi_U_145=U_HELION_MOLAR_MASS !< C API kg mol^-1

real(dp), parameter, public :: HELION_PROTON_MASS_RATIO=2.99315267167_dp !< dimensionless
real(dp), parameter, public :: U_HELION_PROTON_MASS_RATIO=0.00000000013_dp !< dimensionless

real(cdp), protected, public, bind(C,name="HELION_PROTON_MASS_RATIO"):: &
capi_146=HELION_PROTON_MASS_RATIO !< C API dimensionless
real(cdp), protected, public, bind(C,name="U_HELION_PROTON_MASS_RATIO") :: &
capi_U_146=U_HELION_PROTON_MASS_RATIO !< C API dimensionless

real(dp), parameter, public :: HELION_RELATIVE_ATOMIC_MASS=3.014932247175_dp !< dimensionless
real(dp), parameter, public :: U_HELION_RELATIVE_ATOMIC_MASS=0.000000000097_dp !< dimensionless

real(cdp), protected, public, bind(C,name="HELION_RELATIVE_ATOMIC_MASS"):: &
capi_147=HELION_RELATIVE_ATOMIC_MASS !< C API dimensionless
real(cdp), protected, public, bind(C,name="U_HELION_RELATIVE_ATOMIC_MASS") :: &
capi_U_147=U_HELION_RELATIVE_ATOMIC_MASS !< C API dimensionless

real(dp), parameter, public :: HELION_SHIELDING_SHIFT=5.996743e-5_dp !< dimensionless
real(dp), parameter, public :: U_HELION_SHIELDING_SHIFT=0.000010e-5_dp !< dimensionless

real(cdp), protected, public, bind(C,name="HELION_SHIELDING_SHIFT"):: &
capi_148=HELION_SHIELDING_SHIFT !< C API dimensionless
real(cdp), protected, public, bind(C,name="U_HELION_SHIELDING_SHIFT") :: &
capi_U_148=U_HELION_SHIELDING_SHIFT !< C API dimensionless

real(dp), parameter, public :: HERTZ_ATOMIC_MASS_UNIT_RELATIONSHIP=4.4398216652e-24_dp !< u
real(dp), parameter, public :: U_HERTZ_ATOMIC_MASS_UNIT_RELATIONSHIP=0.0000000013e-24_dp !< u

real(cdp), protected, public, bind(C,name="HERTZ_ATOMIC_MASS_UNIT_RELATIONSHIP"):: &
capi_149=HERTZ_ATOMIC_MASS_UNIT_RELATIONSHIP !< C API u
real(cdp), protected, public, bind(C,name="U_HERTZ_ATOMIC_MASS_UNIT_RELATIONSHIP") :: &
capi_U_149=U_HERTZ_ATOMIC_MASS_UNIT_RELATIONSHIP !< C API u

real(dp), parameter, public :: HERTZ_ELECTRON_VOLT_RELATIONSHIP=4.135667696e-15_dp !< eV
real(dp), parameter, public :: U_HERTZ_ELECTRON_VOLT_RELATIONSHIP=0.0_dp !< eV

real(cdp), protected, public, bind(C,name="HERTZ_ELECTRON_VOLT_RELATIONSHIP"):: &
capi_150=HERTZ_ELECTRON_VOLT_RELATIONSHIP !< C API eV
real(cdp), protected, public, bind(C,name="U_HERTZ_ELECTRON_VOLT_RELATIONSHIP") :: &
capi_U_150=U_HERTZ_ELECTRON_VOLT_RELATIONSHIP !< C API eV

real(dp), parameter, public :: HERTZ_HARTREE_RELATIONSHIP=1.5198298460570e-16_dp !< E_h
real(dp), parameter, public :: U_HERTZ_HARTREE_RELATIONSHIP=0.0000000000029e-16_dp !< E_h

real(cdp), protected, public, bind(C,name="HERTZ_HARTREE_RELATIONSHIP"):: &
capi_151=HERTZ_HARTREE_RELATIONSHIP !< C API E_h
real(cdp), protected, public, bind(C,name="U_HERTZ_HARTREE_RELATIONSHIP") :: &
capi_U_151=U_HERTZ_HARTREE_RELATIONSHIP !< C API E_h

real(dp), parameter, public :: HERTZ_INVERSE_METER_RELATIONSHIP=3.335640951e-9_dp !< m^-1
real(dp), parameter, public :: U_HERTZ_INVERSE_METER_RELATIONSHIP=0.0_dp !< m^-1

real(cdp), protected, public, bind(C,name="HERTZ_INVERSE_METER_RELATIONSHIP"):: &
capi_152=HERTZ_INVERSE_METER_RELATIONSHIP !< C API m^-1
real(cdp), protected, public, bind(C,name="U_HERTZ_INVERSE_METER_RELATIONSHIP") :: &
capi_U_152=U_HERTZ_INVERSE_METER_RELATIONSHIP !< C API m^-1

real(dp), parameter, public :: HERTZ_JOULE_RELATIONSHIP=6.62607015e-34_dp !< J
real(dp), parameter, public :: U_HERTZ_JOULE_RELATIONSHIP=0.0_dp !< J

real(cdp), protected, public, bind(C,name="HERTZ_JOULE_RELATIONSHIP"):: &
capi_153=HERTZ_JOULE_RELATIONSHIP !< C API J
real(cdp), protected, public, bind(C,name="U_HERTZ_JOULE_RELATIONSHIP") :: &
capi_U_153=U_HERTZ_JOULE_RELATIONSHIP !< C API J

real(dp), parameter, public :: HERTZ_KELVIN_RELATIONSHIP=4.799243073e-11_dp !< K
real(dp), parameter, public :: U_HERTZ_KELVIN_RELATIONSHIP=0.0_dp !< K

real(cdp), protected, public, bind(C,name="HERTZ_KELVIN_RELATIONSHIP"):: &
capi_154=HERTZ_KELVIN_RELATIONSHIP !< C API K
real(cdp), protected, public, bind(C,name="U_HERTZ_KELVIN_RELATIONSHIP") :: &
capi_U_154=U_HERTZ_KELVIN_RELATIONSHIP !< C API K

real(dp), parameter, public :: HERTZ_KILOGRAM_RELATIONSHIP=7.372497323e-51_dp !< kg
real(dp), parameter, public :: U_HERTZ_KILOGRAM_RELATIONSHIP=0.0_dp !< kg

real(cdp), protected, public, bind(C,name="HERTZ_KILOGRAM_RELATIONSHIP"):: &
capi_155=HERTZ_KILOGRAM_RELATIONSHIP !< C API kg
real(cdp), protected, public, bind(C,name="U_HERTZ_KILOGRAM_RELATIONSHIP") :: &
capi_U_155=U_HERTZ_KILOGRAM_RELATIONSHIP !< C API kg

real(dp), parameter, public :: HYPERFINE_TRANSITION_FREQUENCY_OF_CS_133=9192631770_dp !< Hz
real(dp), parameter, public :: U_HYPERFINE_TRANSITION_FREQUENCY_OF_CS_133=0.0_dp !< Hz

real(cdp), protected, public, bind(C,name="HYPERFINE_TRANSITION_FREQUENCY_OF_CS_133"):: &
capi_156=HYPERFINE_TRANSITION_FREQUENCY_OF_CS_133 !< C API Hz
real(cdp), protected, public, bind(C,name="U_HYPERFINE_TRANSITION_FREQUENCY_OF_CS_133") :: &
capi_U_156=U_HYPERFINE_TRANSITION_FREQUENCY_OF_CS_133 !< C API Hz

real(dp), parameter, public :: INVERSE_FINE_STRUCTURE_CONSTANT=137.035999084_dp !< dimensionless
real(dp), parameter, public :: U_INVERSE_FINE_STRUCTURE_CONSTANT=0.000000021_dp !< dimensionless

real(cdp), protected, public, bind(C,name="INVERSE_FINE_STRUCTURE_CONSTANT"):: &
capi_157=INVERSE_FINE_STRUCTURE_CONSTANT !< C API dimensionless
real(cdp), protected, public, bind(C,name="U_INVERSE_FINE_STRUCTURE_CONSTANT") :: &
capi_U_157=U_INVERSE_FINE_STRUCTURE_CONSTANT !< C API dimensionless
